--- a/new.css
+++ b/new.css
@@ -1,14 +1,13 @@
 body {
+    margin: 0;
     overflow-x: hidden;
-    background-color: #673f4f;
+    background-color: #ca91a8;
 }
 
 .main {
     display: grid;
-    grid-template-columns: repeat(3, 33%);
-    grid-template-rows: 10%, 40%, 40%, 10%;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    grid-template-columns: repeat(3, 33.33%);
+    grid-template-rows: auto, 1fr, 1fr, auto;
 
 }
 
@@ -35,7 +34,7 @@ body {
 }
 
 #main-header {
-    margin-top: 0;
+    margin: 0;
     font-family: Tahoma, sans-serif;
     text-align: center;
     color: #f0f8ff;
@@ -43,17 +42,26 @@ body {
 }
 
 #infobox {
-    background-color: aqua;
+    background-color: #00000080;
+    border-radius: 4vh;
+    color: #f0f8ff;
+    min-height: 100%;
+    text-align: center;
 }
 
 #logo {
+    margin-bottom: 5%;
     width: 100%;
 }
 
 #copyright {
-    bottom: 0;
+    margin: 0;
     width: 100%;
-    position: absolute;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    text-align: center;
     color: #f0f8ff;
     background-color: #342428;
+    font-family: Arial, Helvetica, sans-serif;
 }
