--- a/style.css
+++ b/style.css
@@ -1,118 +1,45 @@
 /*General stuff*/
 body {
-    margin: 0;
-    overflow-x: hidden;
-    background-color: #ffbcd8;
+
+    background-color: #59cbda;
+    color: aliceblue;
     font-family: Tahoma, sans-serif;
 }
 
-a {
-    color: #ffffff;
-}
-
-a:hover {
-    color: #61fc9f;
-}
-
-/*Grid setup*/
-main {
-    display: grid;
-    grid-template-columns: 1fr, 2fr, 1fr;
-    grid-template-rows: auto, 1fr, 1fr, auto;
-}
-
-.header {
-    grid-row: 1;
-    grid-column: 1/4;
-}
-
-.container {
-    grid-row: 2;
-    grid-column-start: 2;
-}
-
-.logotype {
-    grid-row: 3;
-    grid-column-start: 2;
-}
-
-.footer {
-    grid-row: 4;
-    grid-column: 1/4;
-}
-
-/*Site header customization*/
-#main-header {
+article {
+    border: 0.5vh solid #00477d50;
     padding: 1vh;
-    margin: 0;
-    text-align: center;
-    color: #f0f8ff;
-    background-color: #472d33;
+    margin: 1vh;
 }
 
-/*Site header text-decoration no unline*/
-
-/*Info box showing recipes customization*/
-.container {
-    padding-top: 3vh;
+article,img {
+    height: 20vw;
+    display: flex;
+    border-radius: 3vh;
+    margin-left: 1vh;
+    margin-right: 1vh;
 }
 
-.info-box {
-    padding: 2px;
-    border-radius: 4vh;
-    color: #f0f8ff;
-    background-color: #00000080;
-    list-style-position: inside;
-    padding-bottom: 2vh;
+#buy {
+    padding: 1vh;
+    border-radius: 10vh;
+    border-color: #00000000;
+    background-color: #00000050;
+    margin-top: 0.5vh;
+    margin-bottom: 0.5vh;
 }
 
-#recipes-header {
-    text-align: center; /*Centering the "Våra favoriter" text*/
+#buy:hover {
+    background-color: #53535350;
+    scale: 105%;
+    cursor: pointer;
 }
 
-/*Logotype customization*/
-.logotype {
-    padding-bottom: 5vh;
+#shopping-cart{
+    height: 5vh;
+    border-radius: 0;
 }
 
-#logo {
-    position: absolute;
-    height: 25%;
-    bottom: 8vh;
-
-    /*Aligning the image to the center*/
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-/*Footer customization*/
-.footer {
+#stretch {
     width: 100%;
-    bottom: 0;
-    position: fixed;
-}
-
-#copyright {
-    margin-bottom: 0;
-    padding: 2vh;
-    text-align: center;
-    color: #f0f8ff;
-    background-color: #472d33;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-/*smultronpaj.hmtl*/
-/*Image properties for the preview image*/
-#smultronpaj {
-    display: block;
-    margin: auto;
-    padding-bottom: 3vh;
-    height: 40vh;
-}
-
-#logo-smultronpaj {
-    display: block;
-    margin: auto;
-    max-height: 20vh;
-    padding: 5vh;
 }
